[package]
name = "afterburn"
repository = "https://github.com/coreos/afterburn"
license = "Apache-2.0"
edition = "2021"
# when updating this, also update README.md and docs/index.md
rust-version = "1.58.0"
exclude = ["/.cci.jenkinsfile", "/.github", "/.gitignore"]
authors = [ "Stephen Demos <stephen.demos@coreos.com>",
            "Luca Bruno <lucab@debian.org>" ]
description = "A simple cloud provider agent"
version = "5.3.0"

[package.metadata.release]
sign-commit = true
sign-tag = true
push = false
publish = false
pre-release-commit-message = "cargo: Afterburn release {{version}}"
tag-message = "Afterburn v{{version}}"

[[bin]]
name = "afterburn"
path = "src/main.rs"

[profile.release]
lto = true
# We assume we're being delivered via e.g. RPM which supports split debuginfo
debug = true

[dependencies]
anyhow = "1.0"
base64 = "0.13"
byteorder = "1.4"
cfg-if = "1.0"
clap = { version = "3.1", "default_features" = false, "features" = ["std", "cargo", "suggestions", "wrap_help"] }
hostname = "0.3"
ipnetwork = ">= 0.17, < 0.21"
libsystemd = ">= 0.2.1, < 0.6.0"
mailparse = "0.13"
maplit = "1.0"
mime = "0.3"
nix = ">= 0.19, < 0.25"
openssh-keys = "0.5"
openssl = "0.10"
pnet_base = ">= 0.26, < 0.32"
pnet_datalink = ">= 0.26, < 0.32"
reqwest = { version = ">= 0.10, < 0.12", features = [ "blocking" ] }
serde =  { version = "1.0", features = [ "derive" ] }
serde-xml-rs = ">= 0.4, < 0.6"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
slog-async = ">= 2.5, < 3"
slog-scope = "4.3"
slog-term = ">= 2.6, < 3"
tempfile = ">= 3.2, < 4"
users = "0.11"
vmw_backdoor = "0.2"

[dependencies.slog]
version = "2.7"
features = ["max_level_trace", "release_max_level_info"]

[dev-dependencies]
mockito = ">= 0.29, < 0.32"
