[package]
name = "afterburn"
repository = "https://github.com/coreos/afterburn"
license = "Apache-2.0"
edition = "2021"
# when updating this, also update README.md and docs/index.md
rust-version = "1.66.0"
exclude = ["/.cci.jenkinsfile", "/.github", "/.gitignore"]
authors = [ "Stephen Demos <stephen.demos@coreos.com>",
            "Luca Bruno <lucab@debian.org>" ]
description = "A simple cloud provider agent"
version = "5.4.1"

[package.metadata.release]
sign-commit = true
sign-tag = true
push = false
publish = false
pre-release-commit-message = "cargo: Afterburn release {{version}}"
tag-message = "Afterburn v{{version}}"

# See https://github.com/coreos/cargo-vendor-filterer
[package.metadata.vendor-filter]
# cargo-vendor-filterer supports wildcards but requires some degree of LLVM
# support for every matching platform, which isn't necessarily available
# out of the box.  Use this as a stand-in.  Note that architecture-specific
# crate dependencies (apart from wasm32) are uncommon in the ecosystem.
platforms = ["x86_64-unknown-linux-gnu"]
all-features = true

[[bin]]
name = "afterburn"
path = "src/main.rs"

[profile.release]
# We assume we're being delivered via e.g. RPM which supports split debuginfo
debug = true

[dependencies]
anyhow = "1.0"
cfg-if = "1.0"
clap = { version = "4", "default_features" = false, "features" = ["std", "cargo", "error-context", "help", "suggestions", "usage", "wrap_help"] }
ipnetwork = ">= 0.17, < 0.21"
libsystemd = ">= 0.2.1, < 0.7.0"
mailparse = ">= 0.13, < 0.15"
maplit = "1.0"
nix = ">= 0.19, < 0.27"
openssh-keys = ">= 0.5, < 0.7"
openssl = "0.10"
pnet_base = ">= 0.26, < 0.34"
pnet_datalink = ">= 0.26, < 0.34"
reqwest = { version = ">= 0.10, < 0.12", features = [ "blocking" ] }
serde =  { version = "1.0", features = [ "derive" ] }
serde-xml-rs = ">= 0.4, < 0.7"
serde_json = "1.0"
serde_yaml = ">= 0.8, < 0.10"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_info"] }
slog-async = ">= 2.5, < 3"
slog-scope = "4.3"
slog-term = ">= 2.6, < 3"
tempfile = ">= 3.2, < 4"
users = "0.11"
vmw_backdoor = "0.2"
zbus = ">= 2.3, < 4"

[dev-dependencies]
mockito = ">= 0.29, < 1.1"
